[package]
name = "pico-sandbox"
version = "0.1.0"
description = "Tests on the Raspberry Pi Pico 2W"
edition = "2021"
keywords = ["embedded", "hal", "raspberry-pi", "rp235x", "rp2350", "embedded-hal"]
license = "MIT"
repository = "https://github.com/tigeryant/pico-sandbox.git "
rust-version = "1.79"

[[bin]]
name = "pico-sandbox"
test = false
bench = false

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.2.0"}
defmt = "0.3"
defmt-rtt = "0.4.0"
dht-sensor = "0.2.1"
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
fugit = "0.3.6"
futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
hd44780-driver = "0.4.0"
heapless = "0.8.0"
nb = "1.0"
panic-halt = "0.2.0"
pio = "0.2.0"
pio-proc = "0.2.0"
rp235x-hal = {version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
# The examples use features not yet available in rp-binary-info 0.1.0,
# so the minimum version implied by the rp235x-hal 0.3.0 dependency is not sufficient.
rp-binary-info = "0.1.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
static_cell = "2.1.0"
embedded-hal-nb = "1.0.0"
embedded-graphics = "0.7.1"
sh1106 = "0.4.0"

[target.'cfg( target_arch = "arm" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}

[target.'cfg( target_arch = "riscv32" )'.dependencies]
embassy-executor = {version = "0.5", features = ["arch-riscv32", "executor-thread"]}
